--- a/app/templates/components/_header.html
+++ b/app/templates/components/_header.html
@@ -1,49 +1,65 @@
-<nav class="sticky top-0 z-50 border-gray-200 bg-gray-100 !bg-opacity-65">
+<nav class="sticky top-0 z-50 border-gray-200 bg-gray-100 !bg-opacity-65 dark:bg-gray-600">
   <div class="max-w-screen-2xl flex flex-wrap items-center justify-between mx-auto p-4">
-    <a href="{{ url_for('main.home') }}" class="flex items-center space-x-5 rtl:space-x-reverse">
-        <img src="https://i.ibb.co/F6MdYJp/zlagoda-logo.png" class="h-20" alt="Logo" />
-        <span class="self-center text-5xl font-semibold whitespace-nowrap dark:text-white">Zlagoda</span>
-    </a>
-    <button data-collapse-toggle="navbar-solid-bg" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-solid-bg" aria-expanded="false">
-        <span class="sr-only">Open main menu</span>
-        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
-        </svg>
-    </button>
-    <div class="hidden w-full md:block md:w-auto" id="navbar-solid-bg">
-      <ul class="flex flex-col text-2xl font-medium mt-4 rounded-lg bg-gray-50 md:space-x-12 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent dark:bg-gray-800 md:dark:bg-transparent dark:border-gray-700">
-        <li>
-          <a href="{{ url_for('main.home') }}" class="block py-2 px-3 md:p-0 text-gray-900 rounded
-           hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
-            md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
-             aria-current="page">
-            Home
-          </a>
-        </li>
-        <li>
-          <a href="{{ url_for('goods_and_categories.goods_in_store') }}" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100
-          md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white md:dark:hover:text-blue-500
-          dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
-            Goods & Categories
-          </a>
-        </li>
-        <li>
-          <a href="{{ url_for('staff_and_clients.workers') }}" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 
-          md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
-          md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white 
-          md:dark:hover:bg-transparent">
-            Staff & Clients
-          </a>
-        </li>
-        <li>
-          <a href="{{ url_for('main.login') }}" class="block py-2 px-3 ml-12 md:p-0 text-gray-900 rounded hover:bg-gray-100
-          md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
-          md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white 
-          md:dark:hover:bg-transparent">
-            Log in 
-          </a>
-        </li>
-      </ul>
+    <div class="flex items-center gap-20">
+      <a href="{{ url_for('main.home') }}" class="flex items-center space-x-5 rtl:space-x-reverse">
+          <img src="https://i.ibb.co/F6MdYJp/zlagoda-logo.png" class="h-20" alt="Logo" />
+          <!-- <span class="self-center text-5xl font-semibold whitespace-nowrap dark:text-white">Zlagoda</span> -->
+      </a>
+      <button data-collapse-toggle="navbar-solid-bg" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-solid-bg" aria-expanded="false">
+          <span class="sr-only">Open main menu</span>
+          <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+          </svg>
+      </button>
+      <div class="flex flex-row">
+        <div class="hidden w-full md:block md:w-auto" id="navbar-solid-bg">
+          <ul class="flex flex-col text-2xl font-medium mt-4 rounded-lg bg-gray-50 md:space-x-12 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent dark:bg-gray-800 md:dark:bg-transparent dark:border-gray-700">
+            <li>
+              <a href="{{ url_for('main.home') }}" class="block py-2 px-3 md:p-0 text-gray-900 rounded
+              hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
+                md:dark:md:hover:!text-cyan-700 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
+                aria-current="page">
+                Home
+              </a>
+            </li>
+            <li>
+              <a href="{{ url_for('goods_and_categories.goods_in_store') }}" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100
+              md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white md:dark:hover:!text-cyan-700
+              dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">
+                Goods & Categories
+              </a>
+            </li>
+            <li>
+              <a href="{{ url_for('staff_and_clients.workers') }}" class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 
+              md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
+              md:dark:hover:!text-cyan-700 dark:hover:bg-gray-700 dark:hover:text-white 
+              md:dark:hover:bg-transparent">
+                Staff & Clients
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="flex">
+        <div class="hidden w-full md:block md:w-auto" id="navbar-solid-bg">
+          <ul class="items-center flex flex-col text-2xl font-medium mt-4 rounded-lg bg-gray-50 md:space-x-12 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent dark:bg-gray-800 md:dark:bg-transparent dark:border-gray-700">
+            <li>
+              <a href="{{ url_for('main.login') }}" class="block py-2 px-3 ml-12 md:p-0 text-gray-900 rounded hover:bg-gray-100
+              md:hover:bg-transparent md:border-0 md:hover:text-cyan-600 dark:text-white
+              md:dark:hover:!text-cyan-700 dark:hover:bg-gray-700 dark:hover:text-white 
+              md:dark:hover:bg-transparent">
+                Log in 
+              </a>
+            </li>
+            <li>
+              <div>
+                {% include 'components/_theme_switch.html' %}
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
 </nav>
