--- a/app/templates/components/_login_form.html
+++ b/app/templates/components/_login_form.html
@@ -1,27 +1,31 @@
 <div class="flex flex-col my-auto px-6 py-20 lg:px-8">
   <div class="sm:mx-auto w-3xl sm:w-full sm:max-w-sm">
     <img class="mx-auto h-16 w-auto" src="https://i.ibb.co/F6MdYJp/zlagoda-logo.png" alt="Your Company">
-    <h2 class="mt-10 text-center text-4xl font-bold leading-9 tracking-tight text-gray-900">Log in to your account</h2>
+    <h2 class="mt-10 text-center text-4xl font-bold leading-9 tracking-tight text-gray-900 dark:text-gray-300">Log in to your account</h2>
   </div>
 
   <div class="mt-10 sm:mx-auto w-3xl sm:w-full sm:max-w-sm">
     <form class="space-y-6" action="#" method="POST">
       <div>
-        <label for="email" class="block text-lg font-medium leading-6 text-gray-900">Email address</label>
+        <label for="email" class="block text-lg font-medium leading-6 text-gray-900 dark:text-gray-300">Email address</label>
         <div class="mt-2">
-          <input id="email" name="email" type="email" autocomplete="email" required class="block w-full rounded-md border-0 text-xl py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-cyan-600 sm:text-sm sm:leading-6">
+          <input id="email" name="email" type="email" autocomplete="email" required class="block w-full rounded-md border-0 text-xl 
+          py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 
+          focus:ring-inset focus:ring-cyan-600 sm:text-sm sm:leading-6 dark:bg-gray-700 dark:border-gray-600 dark:ring-gray-500">
         </div>
       </div>
 
       <div>
         <div class="flex items-center justify-between">
-          <label for="password" class="block text-lg font-medium leading-6 text-gray-900">Password</label>
+          <label for="password" class="block text-lg font-medium leading-6 text-gray-900 dark:text-gray-300">Password</label>
           <div class="text-sm">
             <a href="#" class="font-semibold text-cyan-600 hover:text-sky-600">Forgot password?</a>
           </div>
         </div>
         <div class="mt-2">
-          <input id="password" name="password" type="password" autocomplete="current-password" required class="block w-full rounded-md border-0 text-xl py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-cyan-600 sm:text-sm sm:leading-6">
+          <input id="password" name="password" type="password" autocomplete="current-password" required class="block w-full rounded-md 
+          border-0 text-xl py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 
+          focus:ring-2 focus:ring-inset focus:ring-cyan-600 sm:text-sm sm:leading-6 dark:bg-gray-700 dark:border-gray-600 dark:ring-gray-500">
         </div>
       </div>
 
