--- a/app/templates/components/_workers_topbar.html
+++ b/app/templates/components/_workers_topbar.html
@@ -20,7 +20,7 @@
     </ul>
     <div class="flex flex-col my-4 mx-8">
         <div class="flex flex-row">
-            <div class="text-xl w-3/4">
+            <div class="text-xl w-3/4 dark:text-gray-300">
                 Our workers
                 <p class="mt-1 text-base font-normal text-gray-500 dark:text-gray-400">
                     Meet the heart and soul of our supermarket—our dedicated team of employees and workers. 
@@ -28,7 +28,7 @@
                     ensuring your shopping experience is nothing short of exceptional.Committed to excellence, 
                     they embody our values of quality, integrity, and community. 
                 </p>
-                <div class="py-5 bg-white dark:bg-gray-900">
+                <div class="py-5 bg-white dark:bg-gray-800">
                     {% include 'components/_dropdown_search_input.html' %}
                 </div>
             </div>
