--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -8,20 +8,19 @@
     <title>{% block title %}Default Title{% endblock %}</title>
 </head>
 
-<body>
-    <div class="flex flex-col">
+<body class="dark:bg-gray-800 -z-20">
         {% include 'components/_header.html' %}
 
 
         {% block content %}
 
         {% endblock %}
-    </div>  
 
     {% block scripts %}
     
     {% endblock %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+    <!-- <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.5/dist/cdn.min.js"></script> -->
 
 </body>
 
