--- a/app/templates/pages/home.html
+++ b/app/templates/pages/home.html
@@ -3,7 +3,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<div class="absolute flex h-screen left-0 right-0 flex-col overflow-hidden">
+<div class="absolute flex h-screen top-0 bottom-0 left-0 right-0 flex-col overflow-hidden">
         
         <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-clip blur-3xl sm:-top-80" aria-hidden="true">
             <div class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr
@@ -17,10 +17,10 @@
             
         <h1 class="mb-4 text-3xl text-center font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl">
             Welcome to 
-            <span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">«Zlagoda»</span>
+            <span class="text-6xl md:text-9xl font-extrabold bg-clip-text text-transparent bg-[linear-gradient(to_right,theme(colors.green.300),theme(colors.green.100),theme(colors.sky.400),theme(colors.teal.400),theme(colors.sky.400),theme(colors.cyan.500),theme(colors.green.300))] bg-[length:300%_auto] animate-gradient">«Zlagoda»</span>
             supermarket.
         </h1>
-        <p class="text-lg text-center font-normal text-gray-500 lg:text-xl dark:text-gray-400">
+        <p class="text-lg text-center font-normal text-gray-500 lg:text-xl dark:text-gray-400 bg-cy">
             Development of AIS to regulate the operation of the grocery mini-supermarket "ZLAGODA":
             management of the sales process of goods in a grocery mini-supermarket.
         </p>
@@ -31,3 +31,4 @@
         </div>
 </div>
 {% endblock %}
+
