--- a/app/templates/components/_data_table.html
+++ b/app/templates/components/_data_table.html
@@ -11,12 +11,11 @@
         <thead class="text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
             <tr>
 
-                <th x-cloak x-show="selecting" scope="col" class="p-4">
+                <th x-cloak x-show="Alpine.store('tableState').selecting" scope="col" class="p-4">
                     <div class="flex items-center">
                         <input
                             id="checkbox-all-search"
                             type="checkbox"
-                            x-model="selectAll"
                             class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
                         >
                         <label for="checkbox-all-search" class="sr-only">checkbox</label>
@@ -36,14 +35,14 @@
 
                 {% endfor %}
                 
-                <th x-show="!selecting" scope="col" class="px-6 py-3">
+                <th x-show="!Alpine.store('tableState').selecting" scope="col" class="px-6 py-3">
                     <span class="sr-only">Edit</span>
                 </th>
             </tr>
         </thead>
         <tbody>
             {% for item in items %}
-            <tr x-data="rowComponent()" x-init="init('{{ item.upc }}', '{{ item.ID }}', '{{ item.category_id }}', '{{ active_tab }}')" class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">                <td x-cloak x-show="selecting" class="w-4 p-4">
+            <tr x-data="rowComponent()" x-init="init('{{ item.upc }}', '{{ item.ID }}', '{{ item.category_id }}', '{{ active_tab }}')" class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">                <td x-cloak x-show="Alpine.store('tableState').selecting" class="w-4 p-4">
                     <div class="flex items-center">
                         <input
                             id="checkbox-table-search-1"
@@ -66,7 +65,7 @@
                         </td>
                     {% endif %}
                 {% endfor %}
-                <td x-show="!selecting" class="px-6 py-4 text-right">
+                <td x-show="!Alpine.store('tableState').selecting" class="px-6 py-4 text-right">
                     <button x-show="!editing" @click="toggleRowEdit()" class="font-medium text-sky-600 dark:text-blue-500 hover:underline">
                         <span >Edit</span>
                     </button>
