--- a/app/templates/components/_data_table_header.html
+++ b/app/templates/components/_data_table_header.html
@@ -12,7 +12,7 @@
             {% endif %}
         </div>
     </div>
-    <div x-show="!selecting" class="w-1/4 flex flex-col justify-center items-center">
+    <div x-show="!Alpine.store('tableState').selecting" class="w-1/4 flex flex-col justify-center items-center">
             <button
                 :id="activeTab === 'categories' ? 'addCategory' : 'addProduct'"
                 @click="activeTab === 'categories' ? addCategory() : addProduct()"
@@ -26,7 +26,7 @@
 
             <button 
                 :id="activeTab === 'categories' ? 'removeCategory' : 'removeProduct'"
-                @click="selecting = true"
+                @click="toggleSelecting()"
                 class=" w-3/4 h-1/3 py-2.5 px-5 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border
                 border-gray-200 hover:bg-gray-100 hover:text-cyan-700 focus:z-10 focus:ring-4 focus:ring-gray-100 
                 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white
@@ -37,7 +37,7 @@
 
             </button>
         </div>
-        <div x-cloak x-show="selecting" class="w-1/4 flex flex-col justify-center items-center">
+        <div x-cloak x-show="Alpine.store('tableState').selecting" class="w-1/4 flex flex-col justify-center items-center">
               <button 
                 @click="activeTab === 'categories' ? removeCategory() : removeProduct()"
                 class="w-3/4 h-1/3 py-2.5 px-5 me-2 mb-4 inline-flex items-center justify-center
@@ -55,7 +55,7 @@
             </button>
 
             <button 
-                @click="selecting = false; editing=false"
+                @click="toggleSelecting()"
                 class=" w-3/4 h-1/3 py-2.5 px-5 me-2 mb-2 inline-flex items-center justify-center text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border
                 border-gray-200 hover:bg-gray-100 hover:text-cyan-700 focus:z-10 focus:ring-4 focus:ring-gray-100 
                 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white
