--- a/app/static/css/toast.css
+++ b/app/static/css/toast.css
@@ -27,6 +27,7 @@
   margin-bottom: 10px;
   justify-content: space-between;
   animation: show_toast 0.3s ease forwards;
+  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.2);
 }
 @keyframes show_toast {
   0% {
