--- a/app/templates/components/_data_table.html
+++ b/app/templates/components/_data_table.html
@@ -1,5 +1,3 @@
-{% from "components/_dropdown_search.html" import dropdown %}
-
 <table x-data="tableInteractions('{{ active_tab }}', {{ items }}, {{columns_json}}, '{{key_column}}')" class="w-full text-pretty text-left rtl:text-right text-gray-500 dark:text-gray-400">
     <caption class="p-5 text-lg font-semibold text-left rtl:text-right text-gray-900 bg-white dark:text-white dark:bg-gray-800">
         <div class="flex flex-col">
@@ -44,7 +42,7 @@
     </thead>
 
 
-    <tbody class="table-body" x-data>
+    <tbody class="table-body align-middle justify-center content-center" x-data>
         <template x-for="row in $store.tableState.rowElements" :key="row.{{key_column}}">
             <tr :class="{'bg-white': true, 'border-b': true, 'dark:bg-gray-800': true, 'dark:border-gray-700': true, 'editing': row.editing}" :data-key="row.{{key_column}}">
                 <td x-cloak x-show="$store.tableState.globalState === GlobalStates.SELECTING" class="w-4 p-4">
@@ -62,45 +60,14 @@
                     <template x-if="key !== 'editing'">
                         <td class="px-6 py-4">
                             <span x-show="!row.editing" x-text="value" class="text-scramble" :data-key="key"></span>
-                            <template x-if="rawColumns[key] === 'PK'">
+                            <template x-if="rawColumns[key] === 'PK' && row.editing">
                                 <span x-show="row.editing" x-text="value" class="text-scramble" :data-key="key"></span>
                             </template>
-                            <template x-if="rawColumns[key] == 'FK'">
-                                <div x-cloak x-show="row.editing">
-                                <!-- <span x-cloak x-show="row.editing">FK must be here</span> -->
-                                    <div x-data="dropdownComponent(['Option 1', 'Option 2', 'Option 3'])" class="relative group">
-                                        <button @click="toggleDropdown" :id="`${row.{{key_column}}}-${key}-dropdown-button`" 
-                                        class="inline-flex justify-center w-full h-full text-sm font-medium text-gray-700 
-                                        bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none
-                                        focus:ring-blue-500 p-2.5 dark:bg-gray-700 dark:border-gray-600 
-                                        dark:placeholder-gray-400 dark:text-white dark:focus:ring-cyan-500 dark:focus:border-cyan-500">
-                                        <span x-text="selectedOption || 'Select'"></span>
-                                        <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-                                            <path fill-rule="evenodd" d="M6.293 9.293a1 1 0 011.414 0L10 11.586l2.293-2.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" />
-                                        </svg>
-                                        </button>
-                                        <div x-show="isOpen" @click.away="isOpen = false" :id="`${row.{{key_column}}}-${key}-dropdown-menu`" 
-                                        class="absolute right-0 mt-2ring-1 ring-black ring-opacity-5 p-1 space-y-1 z-10 bg-white 
-                                        divide-y divide-gray-100 dark:divide-gray-600 rounded-lg shadow dark:bg-gray-700 block">
-                                        <input x-model="searchTerm" class="bg-gray-50 border border-gray-300 text-gray-900 
-                                        text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 
-                                        dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white 
-                                        dark:focus:ring-cyan-500 dark:focus:border-cyan-500" placeholder="Search items" autocomplete="off">
-                                        <div class="overflow-auto max-h-40">
-                                            <template x-for="option in filteredOptions()" :key="option">
-                                            <a @click="selectOption(option)" href="#" class="px-4 py-2 text-gray-700 dark:text-white 
-                                            cursor-pointer rounded-md inline-flex w-full hover:bg-gray-100 dark:hover:bg-gray-600 
-                                            dark:hover:text-white">
-                                                <span x-text="option"></span>
-                                            </a>
-                                            </template>
-                                        </div>
-                                        </div>
-                                    </div>
-                                </div>
+                            <template x-if="rawColumns[key] == 'FK' && row.editing">
+                                {% include 'components/_dropdown_search.html' %}
                             </template>
-                            <template x-if="rawColumns[key] === 'ATTRIB'">
-                                <input x-cloak x-show="row.editing" type="text" :id="`${row.{{key_column}}}-${key}-input`" 
+                            <template x-if="rawColumns[key] === 'ATTRIB' && row.editing">
+                                <input type="text" :id="`${row.{{key_column}}}-${key}-input`" 
                                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-cyan-500 dark:focus:border-cyan-500"
                                 :value="value" />
                             </template>
