--- a/app/templates/components/_dropdown_search.html
+++ b/app/templates/components/_dropdown_search.html
@@ -1,54 +1,29 @@
-{% macro dropdown(options, row_id, key) %}
-<div x-data="dropdownComponent(['Option 1', 'Option 2', 'Option 3'])" class="relative group">
-  <button @click="toggleDropdown" :id="'dropdown-button-' + row_id + '-' + key" class="inline-flex justify-center w-full h-full text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-cyan-500 dark:focus:border-cyan-500">
-    <span x-text="selectedOption || 'Select'"></span>
-    <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+<div x-data="dropdownComponent(key)" class="relative group">
+  <button @click="toggleDropdown" :id="`${row.{{key_column}}}-${key}-dropdown-button`" 
+  class="inline-flex justify-center w-full h-full text-sm font-medium text-gray-700 
+  bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none
+  focus:ring-blue-500 p-2.5 dark:bg-gray-700 dark:border-gray-600 
+  dark:placeholder-gray-400 dark:text-white dark:focus:ring-cyan-500 dark:focus:border-cyan-500">
+  <span x-text="selectedOption != null ? Object.values(selectedOption)[0] : 'Select'"></span>
+  <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
       <path fill-rule="evenodd" d="M6.293 9.293a1 1 0 011.414 0L10 11.586l2.293-2.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" />
-    </svg>
+  </svg>
   </button>
-  <div x-show="isOpen" @click.away="isOpen = false" :id="'dropdown-menu-' + row_id + '-' + key" class="hidden absolute right-0 mt-2 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 p-1 space-y-1">
-    <input x-model="searchTerm" class="block w-full px-4 py-2 text-gray-800 border rounded-md focus:outline-none" placeholder="Search items" autocomplete="off">
-    <div class="overflow-auto max-h-40">
-      <template x-for="option in filteredOptions()" :key="option">
-        <a @click="selectOption(option)" href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100 active:bg-blue-100 cursor-pointer rounded-md">
-          <span x-text="option"></span>
-        </a>
+  <div x-show="isOpen" @click.away="isOpen = false" :id="`${row.{{key_column}}}-${key}-dropdown-menu`" 
+  class="absolute right-0 mt-2ring-1 ring-black ring-opacity-5 p-1 space-y-1 z-10 bg-white 
+  divide-y divide-gray-100 dark:divide-gray-600 rounded-lg shadow dark:bg-gray-700 block">
+  <input x-model="searchTerm" class="bg-gray-50 border border-gray-300 text-gray-900 
+  text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 
+  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white 
+  dark:focus:ring-cyan-500 dark:focus:border-cyan-500" placeholder="Search items" autocomplete="off">
+  <div class="overflow-auto max-h-40">
+      <template x-for="option in filteredOptions()" :key="Object.keys(option)[0]">
+          <a @click="selectOption(option)" href="javascript:void(0);" class="px-4 py-2 text-gray-700 dark:text-white 
+          cursor-pointer rounded-md inline-flex w-full hover:bg-gray-100 dark:hover:bg-gray-600 
+          dark:hover:text-white">
+              <span x-text="Object.values(option)[0]"></span>
+          </a>
       </template>
-    </div>
+  </div>
   </div>
 </div>
-{% endmacro %}
-
-
-
-  <!-- <script>
-      const dropdownButton = document.getElementById('my-dropdown-button');
-      const dropdownMenu = document.getElementById('my-dropdown-menu');
-      const searchInput = document.getElementById('my-search-input');
-      let isOpen = false; 
-      
-      function toggleDropdown() {
-        isOpen = !isOpen;
-        dropdownMenu.classList.toggle('hidden', !isOpen);
-      }
-      
-      toggleDropdown();
-      
-      dropdownButton.addEventListener('click', () => {
-        toggleDropdown();
-      });
-      
-      searchInput.addEventListener('input', () => {
-        const searchTerm = searchInput.value.toLowerCase();
-        const items = dropdownMenu.querySelectorAll('a');
-      
-        items.forEach((item) => {
-          const text = item.textContent.toLowerCase();
-          if (text.includes(searchTerm)) {
-            item.style.display = 'block';
-          } else {
-            item.style.display = 'none';
-          }
-        });
-      });
-  </script> -->
