--- a/app/templates/components/_data_table_header.html
+++ b/app/templates/components/_data_table_header.html
@@ -5,10 +5,10 @@
         <p class="mt-1 text-base font-normal text-gray-500 dark:text-gray-400" x-html="activeTab === 'categories' ? 'The variety and fullness of our categories cater to every taste and need. From organic fruits and vegetables to artisanal cheeses, from gluten-free products to international delicacies, our range is meticulously curated to cater to every palate and dietary requirement.' : 'Our supermarket offers a wide range of products. Explore our selection, where the finest goods are curated with care, ensuring that every choice is a step towards unparalleled culinary experiences. Discover the difference with us, where quality isn\'t just a promise—it\'s our guarantee.'"></p>
 
         <div class="py-5 bg-white dark:bg-gray-800">
-            {% if (active_tab != 'goods' and active_tab != 'categories')%}
-                {% include 'components/_search_input_by_category.html' %}
-            {% else %}
+            {% if (active_tab == 'categories')%}
                 {% include 'components/_default_search_input.html' %}
+            {% else %}
+                {% include 'components/_search_input_with_filter.html' %}
             {% endif %}
         </div>
     </div>
