--- a/app/templates/components/_worker_card.html
+++ b/app/templates/components/_worker_card.html
@@ -1,5 +1,5 @@
 
-{% for worker in workers %}
+{% for person in people %}
 <div class="w-full bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
     <div class="flex justify-end px-4 pt-4">
         <button id="dropdownButton{{ loop.index }}" data-dropdown-toggle="dropdown{{ loop.index }}" class="inline-block text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:ring-4 focus:outline-none focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-1.5" type="button">
@@ -23,9 +23,9 @@
         </div>
     </div>
     <div class="flex flex-col items-center px-10 pb-10">
-        <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="https://i.ibb.co/f93t1mB/user.png" alt="worker image"/>
-        <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">{{ worker.name }}</h5>
-        {% for key, value in worker.items() %}
+        <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="https://i.ibb.co/f93t1mB/user.png" alt="person image"/>
+        <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">{{ person.name }}</h5>
+        {% for key, value in person.items() %}
             {% if key != 'name' %}
             <div class="flex items-center w-full my-0.5 text-base text-gray-500 dark:text-gray-400">
                 <span class="font-bold dark:text-gray-300">{{ key.replace('_', ' ') | capitalize }}:</span>
