--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -48,7 +48,7 @@
     <script type="module" src="{{ url_for('static', filename='js/createRow.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/tableInteractions.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/tableState.js') }}"></script>
-    <!-- <script src="{{ url_for('static', filename='js/rowComponent.js') }}"></script> -->
+    <script type="module" src="{{ url_for('static', filename='js/SearchWithFilter.js') }}"></script>
 
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.5/dist/cdn.min.js"></script>
 
