--- a/app/templates/components/_search_input_with_filter.html
+++ b/app/templates/components/_search_input_with_filter.html
@@ -1,4 +1,4 @@
-<form x-data="searchWithFilter()" class="w-3/5">
+<form x-cloak x-data="searchWithFilter()" class="w-3/5">
     <div class="flex">
         <div class="relative">
             <button x-ref="dropdownButton" @click="toggleDropdown" class="flex-shrink-0 w-max z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-gray-300 rounded-s-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700 dark:text-white dark:border-gray-600" type="button">
@@ -19,7 +19,7 @@
         </div>
         <div class="relative w-full">
             <input type="search" x-model="searchTerm" class="block p-2.5 w-full z-20 text-sm text-gray-900 bg-gray-50 rounded-e-lg border-s-gray-50 border-s-2 border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-s-gray-700  dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-blue-500" placeholder="Search for items..." />
-            <button @click="search()" class="absolute top-0 end-0 p-2.5 text-sm font-medium h-full text-white bg-cyan-600 rounded-e-lg border border-cyan-700 hover:bg-sky-600 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-cyan-800 dark:hover:bg-cyan-900 dark:focus:ring-cyan-950">
+            <button @click.prevent="search()" class="absolute top-0 end-0 p-2.5 text-sm font-medium h-full text-white bg-cyan-600 rounded-e-lg border border-cyan-700 hover:bg-sky-600 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-cyan-800 dark:hover:bg-cyan-900 dark:focus:ring-cyan-950">
                 <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
                 </svg>
