--- a/app/templates/components/_search_input_with_filter.html
+++ b/app/templates/components/_search_input_with_filter.html
@@ -1,4 +1,4 @@
-<form x-cloak x-data="searchWithFilter()" class="w-3/5">
+<form x-cloak x-data="searchWithFilter('{{ active_tab }}')" class="w-3/5">
     <div class="flex">
         <div class="relative">
             <button x-ref="dropdownButton" @click="toggleDropdown" class="flex-shrink-0 w-max z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-gray-300 rounded-s-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700 dark:text-white dark:border-gray-600" type="button">
